# algorithms

./: LICENSE  README.md  pyproject.toml
pyalgo/search/: __init__.py  linear_search.py
pyalgo/sort/: __init__.py  insertion_sort.py
tests/search/: test_linear_search.py
tests/sort/: test_insertion_sort.py
